# ai-data-engineer-starter-pack

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  smoke_test.ps1
app/: main.py  pg_log.py
data/: sales.csv
jobs/: etl_sales.py  mini_async_etl.py
ml/: embeddings_demo.py  train_classifier.py
