[project]
name = "1-2-ai-data-engineer-starter-pack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
